src/test/deca/syntax/parser/invalid/field_definition_visibility_number.deca
// Test parser, déclaration d'une méthode avec une visibilité
// qui est un nombre

class myClass {
    145 int x = 12;
}